2004-05-25  n1xt3r  <n1xt3r@bluefalcon>

	* default/blog.conf, plugins/archive/master_index.sh, ChangeLog:
	Moved AUTO_FORMAT & CAT_FEEDS into Plugin Variables section.

	* ChangeLog, plugins/entry/auto_break.sh, plugins/entry/moods.sh:
	Added checks for AUTO_FORMAT.

	* ChangeLog, plugins/archive/master_index.sh:
	Moved master_index plugin into archive plugins.

	* plugins/entry/auto_break.sh, plugins/entry/entry_catlinks.sh, plugins/entry/moods.sh (read_entry):
	Moved code for category links into a new entry plugin.

	* ChangeLog, nb, plugins/atom.sh, plugins/master_index.sh:
	- Removed AUTO_FORMAT and autoformat plugins.
	- Renamed autoformat plugins to entry plugins.
	- (build_archives): new load_plugins plugins/archive
	- (read_entry): new load_plugins plugins/entry

2004-05-23  n1xt3r  <n1xt3r@bluefalcon>

	* ChangeLog, plugins/atom.sh, plugins/rss.sh:
	Removed text filtering (conflict with quotes in HTML links).

	* ChangeLog, docs/nanoblogger.html:
	Minor updates to the documentation's layout.

2004-05-21  n1xt3r  <n1xt3r@bluefalcon>

	* ChangeLog, nb, plugins/atom.sh, plugins/rss.sh:
	- (read_metadata): Removed text filtering.
	- Removed load_filters().
	- Added text filtering to the atom and rss plugins.

	* ChangeLog, nb (read_entry): Enabled filtering mode, escape_chars.

2004-05-19  n1xt3r  <n1xt3r@bluefalcon>

	* plugins/postformat/tidy.sh:
	Fixed conflicting 'generator' tags - Paul Drain <pd@cipherfunk.org>.

	* ChangeLog, nb, plugins/atom.sh, plugins/rss.sh:
	- Set NB_SYND_FILETYPE default to xml - Paul Drain <pd@cipherfunk.org>.
	- Updated rss and atom plugins to utilize NB_SYND_FILETYPE.

	* ChangeLog, docs/nanoblogger.html:
	Updated cgicomment and microblogger links.

2004-05-16  n1xt3r  <n1xt3r@bluefalcon>

	* ChangeLog, plugins/atom.sh, plugins/rss.sh:
	Loads autoformat plugins from inside.

	* ChangeLog, nb:
	(make_archive),(build_archives),(edit_blog): Autoformat plugins no longer
	overwrite (possibly destroy) the entry's metadata.
