@@ -155,11 +155,19 @@ Templates are located in the blog's sub-directory, templates.
 	<th align="left">description</th>
 	</tr>
 	<tr>
-	<td align="left">archive.htm</td>
+	<td align="left">atom.xml*</td>
+	<td align="left">controls look and format of the main atom feed</td>
+	</tr>
+	<tr>
+	<td align="left">atom_entry.xml*</td>
+	<td align="left">controls look of the entries in the atom feed</td>
+	</tr>
+	<tr>
+	<td align="left">archive.htm*</td>
 	<td align="left">controls look of the master archive page</td>
 	</tr>
 	<tr>
-	<td align="left">archive_links.htm</td>
+	<td align="left">archive_links.htm*</td>
 	<td align="left">controls look of the master archive links</td>
 	</tr>
 	<tr>
@@ -167,7 +175,7 @@ Templates are located in the blog's sub-directory, templates.
 	<td align="left">controls look of the categories pages</td>
 	</tr>
 	<tr>
-	<td align="left">category_links.htm</td>
+	<td align="left">category_links.htm*</td>
 	<td align="left">the links to the categories</td>
 	</tr>
 	<tr>
@@ -179,7 +187,7 @@ Templates are located in the blog's sub-directory, templates.
 	<td align="left">controls look of the entry links</td>
 	</tr>
 	<tr>
-	<td align="left">entrycat_links.htm</td>
+	<td align="left">entrycat_links.htm*</td>
 	<td align="left">controls look of the entry category links</td>
 	</tr>
 	<tr>
@@ -187,7 +195,7 @@ Templates are located in the blog's sub-directory, templates.
 	<td align="left">controls look of the blog's main page</td>
 	</tr>
 	<tr>
-	<td align="left">main_links.htm</td>
+	<td align="left">main_links.htm*</td>
 	<td align="left">contains user defined links</td>
 	</tr>
 	<tr>
@@ -200,7 +208,7 @@ Templates are located in the blog's sub-directory, templates.
 	</tr>
 	<tr>
 	<td align="left">month_links.htm</td>
-	<td align="left">controls look of the monthly archive links</td>
+	<td align="left">controls look of the monthly archive links*</td>
 	</tr>
 	<tr>
 	<td align="left">permalink.htm</td>
@@ -211,22 +219,23 @@ Templates are located in the blog's sub-directory, templates.
 	<td align="left">controls look of a blog entry within a permalink page</td>
 	</tr>
 	<tr>
-	<td align="left">rdf_catfeed_entry.xml</td>
+	<td align="left">rdf_catfeed_entry.xml*</td>
 	<td align="left">controls look of the news items in a category's rss feed</td>
 	</tr>
 	<tr>
-	<td align="left">rdf_catfeed.xml</td>
+	<td align="left">rdf_catfeed.xml*</td>
 	<td align="left">controls look and format of a category's rss feed</td>
 	</tr>
 	<tr>
-	<td align="left">rdf_entry.xml</td>
+	<td align="left">rdf_entry.xml*</td>
 	<td align="left">controls look of the news item in the rss feed</td>
 	</tr>
 	<tr>
-	<td align="left">rdf.xml</td>
-	<td align="left">controls look and format of rss feed (index.rdf)</td>
+	<td align="left">rdf.xml*</td>
+	<td align="left">controls look and format of rss feed</td>
 	</tr>
 	</table>
+	* = used by plugin
 </blockquote>
 
 <blockquote>
@@ -241,7 +250,7 @@ Templates are located in the blog's sub-directory, templates.
 	<td align="left">author of entry</td>
 	</tr>
 	<tr>
-	<td align="left">$NB_EntryCategories</td>
+	<td align="left">$NB_EntryCategories*</td>
 	<td align="left">entry's category links</td>
 	</tr>
 	<tr>
@@ -269,7 +278,10 @@ Templates are located in the blog's sub-directory, templates.
 	<td align="left">entry's title</td>
 	</tr>
 	</table>
-	<br />
+	* = generated by plugin
+</blockquote>
+
+<blockquote>
 	<table border="1" cellspacing="4" cellpadding="2">
 	<caption>The main template includes the following placeholders:</caption>
 	<tr>
@@ -297,22 +309,22 @@ Templates are located in the blog's sub-directory, templates.
 	<td align="left">blog's URL</td>
 	</tr>
 	<tr>
-	<td align="left">$NB_Archive_Links</td>
-	<td align="left">links to archives</td>
+	<td align="left">$NB_Month_Links*</td>
+	<td align="left">links to the monthly archives</td>
 	</tr>
 	<tr>
-	<td align="left">$NB_Category_Links</td>
+	<td align="left">$NB_Category_Links*</td>
 	<td align="left">links to categories</td>
 	</tr>
 	<tr>
-	<td align="left">$NB_Main_Links</td>
+	<td align="left">$NB_Main_Links*</td>
 	<td align="left">user defined links</td>
 	</tr>
 	<tr>
 	<td align="left">$NB_Entries</td>
 	<td align="left">all the current entries</td>
-	</tr>
 	</table>
+	* = generated by plugin
 </blockquote>
 
 <p><b>Format of an Entry</b></p>
@@ -354,28 +366,28 @@ To use a some of the new plugins, you may need to identify it's unique placehold
 	<th align="left">notes</th>
 	</tr>
 	<tr>
-	<td align="left">archive/monthly_cal.sh</td>
-	<td align="left">adds a calendar with links for each monthly archive</td>
+	<td align="left">archive/master_index.sh</td>
+	<td align="left">creates a master index page of the archives</td>
+	<td align="left">$BLOG_URL/archives.html</td>
+	<td align="left">requires templates</td>
+	</tr>
+	<tr>
+	<td align="left">archive/monthly/monthly_cal.sh</td>
+	<td align="left">adds a calendar with links for each active day</td>
 	<td align="left">$NB_Monthly_Calendar</td>
 	<td align="left">requires cal</td>
 	</tr>
 	<tr>
 	<td align="left">atom.sh</td>
 	<td align="left">adds an atom feed</td>
-	<td align="left">$BLOG_URL/atom.xml</td>
-	<td align="left">uses templates</td>
+	<td align="left">$BLOG_URL/atom.$NB_SYND_FILETYPE</td>
+	<td align="left">requires templates</td>
 	</tr>
 	<tr>
-	<td align="left">autoformat/auto_break.sh</td>
-	<td align="left">converts blank lines to html paragraph breaks</td>
-	<td align="left">$NB_EntryBody</td>
-	<td align="left">none</td>
-	</tr>
-	<tr>
-	<td align="left">autoformat/moods.sh</td>
-	<td align="left">converts mood variables into icons</td>
-	<td align="left">$NB_EntryBody</td>
-	<td align="left">copy moods directory to blog's directory</td>
+	<td align="left">blog_links.sh</td>
+	<td align="left">generates some useful links</td>
+	<td align="left">$NB_Main_Links, $NB_Month_Links, $NB_Category_Links</td>
+	<td align="left">requires templates</td>
 	</tr>
 	<tr>
 	<td align="left">blog_status.sh</td>
@@ -385,15 +397,21 @@ To use a some of the new plugins, you may need to identify it's unique placehold
 	</tr>
 	<tr>
 	<td align="left">calendar.sh</td>
-	<td align="left">adds a calendar with links for the current month</td>
+	<td align="left">adds a calendar with links for each active day</td>
 	<td align="left">$NB_Calendar</td>
 	<td align="left">requires cal</td>
 	</tr>
 	<tr>
-	<td align="left">category_links.sh</td>
-	<td align="left">adds links to the categories</td>
-	<td align="left">$NB_Category_Links</td>
+	<td align="left">entry/auto_break.sh</td>
+	<td align="left">converts blank lines to html paragraph breaks</td>
+	<td align="left">$NB_EntryBody</td>
 	<td align="left">none</td>
+	</tr>
+	<tr>
+	<td align="left">entry/moods.sh</td>
+	<td align="left">converts mood variables into equivalent images</td>
+	<td align="left">$NB_EntryBody</td>
+	<td align="left">copy moods directory to blog's directory</td>
 	</tr>
 	<tr>
 	<td align="left">fortune.sh</td>
@@ -406,12 +424,6 @@ To use a some of the new plugins, you may need to identify it's unique placehold
 	<td align="left">adds links to entries recent or old</td>
 	<td align="left">$NB_Recent_Entries, $NB_Older_Entries</td>
 	<td align="left">none</td>
-	</tr>
-	<tr>
-	<td align="left">master_index.sh</td>
-	<td align="left">creates a master index page of the archives</td>
-	<td align="left">$BLOG_URL/archives.html</td>
-	<td align="left">uses templates</td>
 	</tr>
 	<tr>
 	<td align="left">mymood.sh</td>
@@ -428,13 +440,12 @@ To use a some of the new plugins, you may need to identify it's unique placehold
 	<tr>
 	<td align="left">rss.sh</td>
 	<td align="left">adds rss feeds</td>
-	<td align="left">$BLOG_URL/index.rdf, $BLOG_URL/$ARCHIVES/cat_n.rdf</td>
-	<td align="left">uses templates</td>
+	<td align="left">$BLOG_URL/index.$NB_SYND_FILETYPE, $BLOG_URL/$ARCHIVES/cat_n.$NB_SYND_FILETYPE</td>
+	<td align="left">requires templates</td>
 	</tr>
 	</table>
+	To disable a plugin, rename the plugin's extension from ".sh" to ".off".
 </blockquote>
-
-To disable a plugin, rename the plugin's extension from ".sh" to ".off".
 <br />
 
 <h2><a name="cr9">Publishing Your Blog to a Remote Site</a></h2>
