@@ -1,3 +1,9 @@
+2004-05-26  n1xt3r  <n1xt3r@bluefalcon>
+
+	* ChangeLog, nb, plugins/blog_links.sh, plugins/category_links.sh:
+	- Replaced category_links plugin with more general, blog_links plugin.
+	- (build_blog): Moved code to generate links into new blog_links plugin.
+
 2004-05-25  n1xt3r  <n1xt3r@bluefalcon>
 
 	* default/blog.conf, plugins/archive/master_index.sh, ChangeLog:
